Add GitHub Actions workflow for Selenium