@@ -1,39 +1,58 @@
 package tests;
 
-import org.junit.*;
-import org.openqa.selenium.WebDriver;
+import org.junit.After;
+import org.junit.Before;
+import org.junit.Test;
+import org.openqa.selenium.*;
 import org.openqa.selenium.chrome.ChromeOptions;
 import org.openqa.selenium.remote.RemoteWebDriver;
+import org.openqa.selenium.support.ui.*;
+
 import pages.LoginPage;
-import pages.ApplyLeavePage;
 
+import java.net.MalformedURLException;
 import java.net.URL;
-import java.net.URI;
-
-
 
 public class DropdownTest {
-
-    public WebDriver driver;
+    private WebDriver driver;
+    private WebDriverWait wait;
 
     @Before
-    public void setup() throws Exception {
+    public void setup() throws MalformedURLException {
+        // Connect to the Selenium container by its service/container name (inside Docker network)
         ChromeOptions options = new ChromeOptions();
-       URL seleniumHubUrl = URI.create("http://selenium:4444/wd/hub").toURL();
-       driver = new RemoteWebDriver(seleniumHubUrl, options);
+        URL remoteUrl = new URL("http://selenium:4444/wd/hub"); // "selenium" is the container name
+
+        driver = new RemoteWebDriver(remoteUrl, options);
         driver.manage().window().maximize();
+
+        wait = new WebDriverWait(driver, 10);
     }
-    
 
     @Test
     public void testLeaveTypeDropdown() {
+        driver.get("https://opensource-demo.orangehrmlive.com/");
+
         LoginPage loginPage = new LoginPage(driver);
         loginPage.login("Admin", "admin123");
 
-        driver.get("https://opensource-demo.orangehrmlive.com/web/index.php/leave/applyLeave");
+        WebElement leaveMenu = wait.until(ExpectedConditions.elementToBeClickable(
+                By.xpath("//span[text()='Leave']/ancestor::a")));
+        leaveMenu.click();
 
-        ApplyLeavePage applyLeavePage = new ApplyLeavePage(driver);
-        applyLeavePage.selectLeaveType("CAN - Vacation");
+        WebElement applyMenu = wait.until(ExpectedConditions.elementToBeClickable(
+                By.xpath("//a[contains(@href, 'applyLeave')]")));
+        applyMenu.click();
+
+        WebElement dropdown = wait.until(ExpectedConditions.elementToBeClickable(
+                By.xpath("//label[text()='Leave Type']/following::div[@class='oxd-select-text'][1]")));
+        dropdown.click();
+
+        WebElement option = wait.until(ExpectedConditions.visibilityOfElementLocated(
+                By.xpath("//div[@role='option']/span[text()='CAN - Vacation']")));
+        option.click();
+
+        System.out.println("Dropdown test passed!");
     }
 
     @After
